--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -2,14 +2,14 @@
 import { getCollection } from "astro:content";
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-const allProjects = await getCollection("projects");
+const allProjects = await getCollection("resources");
 const pageTitle = "Works";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
         <img width="300" height="259" alt="RaccoonLaptopGif" src="/laptop.webp"/>
     </div>
-    <h2>Projects</h2>
+    <h2>Resources</h2>
     <ul role="list" class="link-card-grid">
         {allProjects.map((card) => <Card 
             url={`/projects/${card.slug}/`} 
