First Major Changes

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,7 +24,7 @@ const { url, image, title, body } = Astro.props;
             {title}
         </h3>
         <p class="card__txt">
-            {body}
+            {body} fdfg
         </p>
     </a>
 </li>
