--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,52 +1,59 @@
 ---
 import Layout from '../layouts/Layout.astro';
-const pageTitle = "Milky-Way";
+const pageTitle = "Code and Conquer";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
         <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
     </div>
-    <h1>Milky-Way</h1>
-    <span class="badge">Digital Craftsman (Developer)</span>
+    <h1>Code and Conquer</h1>
+    <quote> It's time to Code and Conquer!!!</quote>
     <h2>About</h2>
     <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
+        Here at Code and Conquer, we are a collection of non-coders learning to code. 
+        We understand that learning to code is a daunting task—after all, it’s a whole new language.
+        However, we hope to help relieve some of the worries and invite you to join us on this journey.
+        We will document what we learn, how we learn, and share some resources along the way! 
+        We also want to share how we create content based on this "development," as learning means that 90% of the time we don’t know the answer.
     </p>
     <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+        In the team, we have a range of skills and experience. 
+        We have people who are at the beginning of their journey and others who have been developing for years. 
+        Since we are all content creators with a wider range of viewerships, we have members with good viewerships and others with much smaller communities. 
+        But we strongly believe there is a place for everyone, no matter how small or how little experience you have..
     </p>
-    <div class="center">
-        <a href="/works/">
-            <button class="btn">My portfolio</button>
-        </a>
-    </div>
-    <h2>Skills</h2>
+    <p>
+        We are currently not taking on new members; however, we might in the future, so please keep checking for updates.
+    </p>
+    <h2>Our Skills</h2>
     <div class="skills center">
         <img class="skills__img" width="46" height="46" alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="DotNetCore" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Angular" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Godot" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/godot/godot-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Unity" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/unity/unity-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Streamerbot" src="https://streamer.bot/logo-transparent.svg"/>
     </div>
-    <h2>Interests</h2>
+    <h2>The Team</h2>
+    <h3>TerrierDarts</h3>
+    <span class="badge">Game and Extension Developer</span>
+    <p>Some Text</p>
+    <h3>BitGamey</h3>
+    <span class="badge">Game Developer</span>
+    <p>Some Text</p>
+    <h3>Andilippi</h3>
+    <span class="badge">Extension and OBS Plug-in Developer</span>
+    <p>Some Text</p>
+    <h3>GoWMan</h3>
+    <span class="badge">Web and Extension Developer</span>
+    <p>Some Text</p>
+    <h3>OSUPhoenix</h3>
+    <span class="badge">Extension Developer</span>
+    <p>Some Text</p>
     <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+    
     </p>
 </Layout>
 
