--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -12,7 +12,7 @@ const pageTitle = "Works";
     <h2>Resources</h2>
     <ul role="list" class="link-card-grid">
         {allProjects.map((card) => <Card 
-            url={`/projects/${card.slug}/`} 
+            url={`/resources/${card.slug}/`} 
             image={card.data.image.url} 
             title={card.data.title} 
             body={card.data.description}
