--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -28,6 +28,7 @@ const pageTitle = "Blog";
                     image={cardPost.data.image.url}
                     title={cardPost.data.title}
                     author={cardPost.data.author}
+                    description={cardPost.data.description}
                     date = {dayjs(cardPost.data.date).format("DD-MMMM-YYYY")}
                 />
             ))
