--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ const pageTitle = "Code and Conquer";
         <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="Godot" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/godot/godot-original.svg"/>
         <img class="skills__img" width="46" height="46" alt="Unity" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/unity/unity-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="OBS" src="https://obsproject.com/assets/images/new_icon_small-r.png"/>
         <img class="skills__img" width="46" height="46" alt="Streamerbot" src="https://streamer.bot/logo-transparent.svg"/>
     </div>
     <h2>The Team</h2>
