--- a/src/layouts/MarkdownPostsLayout.astro
+++ b/src/layouts/MarkdownPostsLayout.astro
@@ -1,19 +1,20 @@
 ---
 import BaseLayout from "./Layout.astro";
+import dayjs from "dayjs";
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonNotesGif" src="/blog.webp" />
+        <img class="pro-img" height="259" alt="RaccoonNotesGif" src={frontmatter.image.url} />
     </div>
     <h2 style="text-decoration:none;">{frontmatter.title}</h2>
     <ul class="badge__list">
         <li>
-            <span class="badge badge--item">AUTHOR</span>{frontmatter.author}
+            <span class="badge badge--item">AUTHOR:</span>{frontmatter.author}
         </li>
         <li>
-            <span class="badge badge--item">PUBLISHED</span>{frontmatter.date}
+            <span class="badge badge--item">PUBLISHED:</span> {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
         </li>
     </ul>
     <slot />
