--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -1,22 +1,36 @@
 ---
 import { getCollection } from "astro:content";
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-const allProjects = await getCollection("resources");
-const pageTitle = "Works";
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/CardWork.astro";
+import dayjs from "dayjs";
+import utc from "dayjs/plugin/utc";
+import type { CollectionEntry } from "astro:content";
+const allPosts = (
+await getCollection(
+    'resources',
+    ({ data }: CollectionEntry<'resources'>) => data.live == true
+  )
+).sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
+
+const pageTitle = "Resources";
 ---
+
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonLaptopGif" src="/laptop.webp"/>
+        <img width="300" height="259" alt="RaccoonNotesGif" src="/blog.webp" />
     </div>
     <h2>Resources</h2>
     <ul role="list" class="link-card-grid">
-        {allProjects.map((card) => <Card 
-            url={`/resources/${card.slug}/`} 
-            image={card.data.image.url} 
-            title={card.data.title} 
-            body={card.data.description}
-        />)}
+        {
+            allPosts.map((cardPost) => (
+                <Card
+                    url={`/resources/${cardPost.id}/`}
+                    image={cardPost.data.image.url}
+                    title={cardPost.data.title}
+                    description={cardPost.data.description}
+                    date = {dayjs(cardPost.data.date).format("DD-MMMM-YYYY")}
+                />
+            ))
+        }
     </ul>
 </Layout>
-
