--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,7 +155,7 @@ small, li {
     list-style: none;
     display: flex;
     background-size: 400%;
-    padding: 20px;
+    /*padding: 10px;*/
 }
 
 .card__link {
@@ -192,9 +192,8 @@ small, li {
 
 .link-card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 1rem;
-    padding: 15;
+    grid-template-columns: repeat(auto-fit, minmax(36ch, 1fr));
+    gap: 1.5rem;
 }
 
 /* Button */
