Pages Starting to Take Shape

--- a/src/layouts/MarkdownWorksLayout.astro
+++ b/src/layouts/MarkdownWorksLayout.astro
@@ -1,19 +1,42 @@
 ---
-import BaseLayout from './Layout.astro';
-import dayjs from 'dayjs';
+import BaseLayout from "./Layout.astro";
+import dayjs from "dayjs";
 const { frontmatter } = Astro.props;
+import PostComments from "../components/PostComments.astro";
 ---
+
 <BaseLayout pageTitle={frontmatter.title}>
     <div class="gif">
-        <img class="pro-img" width="500px" height="281" src={frontmatter.image.url} alt={frontmatter.image.alt} />
+        <img
+            class="pro-img"
+            width="500px"
+            height="281"
+            src={frontmatter.image.url}
+            alt={frontmatter.image.alt}
+        />
     </div>
     <h2>{frontmatter.title}</h2>
     <ul class="badge__list">
         <li>
-            <span class="badge badge--item">Last Updated:</span> {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
+            <span class="badge badge--item">Last Updated:</span>
+            {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
+        </li>
+        <li>
+            <span class="badge badge--item">Home Page:</span> <a
+                class="badge__link"
+                href={frontmatter.homepage}
+                target="_blank">{frontmatter.homepage}</a
+            >
+        </li>
+        <li>
+            <span class="badge badge--item">Offical Docs:</span> <a
+                class="badge__link"
+                href={frontmatter.officaldocs}
+                target="_blank">{frontmatter.officaldocs}</a
+            >
         </li>
     </ul>
- 
-    <slot />
-</BaseLayout>
 
+    <slot />
+    <PostComments />
+</BaseLayout>
