--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ const pageTitle = "Code and Conquer";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
+        <img width="900" height="300" alt="RaccoonSpaceGif" src="/home.png"/>
     </div>
     <h1>Code and Conquer</h1>
     <quote> It's time to Code and Conquer!!!</quote>
@@ -40,8 +40,14 @@ const pageTitle = "Code and Conquer";
     <h2>The Team</h2>
     <h3>TerrierDarts</h3>
     <span class="badge">Game and Extension Developer</span>
-    <p>Some Text</p>
-    <h3>BitGamey</h3>
+    <p>
+        I started coding in late November 2021, and since then, I’ve developed my skills in C#, along with some web development, dabbling in HTML, CSS, and JavaScript. More recently, I’ve been learning GDScript, which has been challenging but fun.  
+        
+        I also stream on <a href="https://twitch.tv/TerrierDarts" target="_blank">Twitch</a>, where I show off my coding skills and offer advice on code and content creation in general. If this sounds like something you’d enjoy, feel free to stop by, hang out, and ask any questions you might have!  
+    </p>
+
+
+    <!--h3>BitGamey</h3>
     <span class="badge">Game Developer</span>
     <p>Some Text</p>
     <h3>Andilippi</h3>
@@ -52,9 +58,7 @@ const pageTitle = "Code and Conquer";
     <p>Some Text</p>
     <h3>OSUPhoenix</h3>
     <span class="badge">Extension Developer</span>
-    <p>Some Text</p>
-    <p>
-    
-    </p>
+    <p>Some Text</p-->
+  
 </Layout>
 
