--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -17,7 +17,7 @@ const pageTitle = "Resources";
 
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonNotesGif" src="/blog.webp" />
+        <img width="900" height="350" alt="RaccoonNotesGif" src="/resources.png" />
     </div>
     <h2>Resources</h2>
     <ul role="list" class="link-card-grid">
