--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,7 +17,7 @@ const pageTitle = "Blog";
 
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonNotesGif" src="/blog.webp" />
+        <img width="900" height="300" alt="RaccoonNotesGif" src="/blog.png" />
     </div>
     <h2>Blogging</h2>
     <ul role="list" class="link-card-grid">
