--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import ThemeIcon from './ThemeIcon.astro';
     <div class="navbar__menu">
         <a href="/blog/">Blog</a>
         <a href="/resources/">Resources</a>
-      
+        <a href="" class="disabled">Podcasts(Coming Soon)</a>
         <ThemeIcon />
     </div>
 </div>
