--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,15 +2,15 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
-const { pageTitle } = Astro.props;
+const { pageTitle, description } = Astro.props;
 ---
 <!DOCTYPE html>
 <html transition:animate="none" lang="en">
 	<head>
         <meta charset="utf-8" />
-        <meta name="description" content="Astro description">
+        <meta name="description" content={description}>
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" as="style">
