--- a/src/components/TeamMember.astro
+++ b/src/components/TeamMember.astro
@@ -47,8 +47,8 @@ const { username, bio, subheading, doras } = Astro.props;
   }
 
   .profile-image {
-    width: 200px;
-    height: 200px;
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
     object-fit: cover;
     margin: 1rem;
