--- a/src/layouts/MarkdownPostsLayout.astro
+++ b/src/layouts/MarkdownPostsLayout.astro
@@ -1,23 +1,34 @@
 ---
 import BaseLayout from "./Layout.astro";
+import PageViews from "../components/PageViews.astro";
 import dayjs from "dayjs";
 const { frontmatter } = Astro.props;
 import PostComments from "../components/PostComments.astro";
 ---
 
 <BaseLayout pageTitle={frontmatter.title} description={frontmatter.description}>
-    <div class="gif">
-        <img class="pro-img" height="259" alt="RaccoonNotesGif" src={frontmatter.image.url} />
-    </div>
-    <h2 style="text-decoration:none;">{frontmatter.title}</h2>
-    <ul class="badge__list">
-        <li>
-            <span class="badge badge--item">AUTHOR:</span>{frontmatter.author}
-        </li>
-        <li>
-            <span class="badge badge--item">PUBLISHED:</span> {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
-        </li>
-    </ul>
-    <slot />
-    <PostComments />
+  <div class="gif">
+    <img
+      class="pro-img"
+      height="259"
+      alt="RaccoonNotesGif"
+      src={frontmatter.image.url}
+    />
+  </div>
+  <h2 style="text-decoration:none;">{frontmatter.title}</h2>
+  <ul class="badge__list">
+    <li>
+      <span class="badge badge--item">AUTHOR:</span>{frontmatter.author}
+    </li>
+    <li>
+      <span class="badge badge--item">PUBLISHED:</span>
+      {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
+    </li>
+    <li>
+      <PageViews/>
+      
+    </li>
+  </ul>
+  <slot />
+  <PostComments />
 </BaseLayout>
