--- a/src/layouts/MarkdownWorksLayout.astro
+++ b/src/layouts/MarkdownWorksLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./Layout.astro";
 import dayjs from "dayjs";
 const { frontmatter } = Astro.props;
 import PostComments from "../components/PostComments.astro";
-import PageViews from "../components/PageViews.astro";
+import PageView from "../components/PageView.astro";
 ---
 
 <BaseLayout pageTitle={frontmatter.title} description={frontmatter.description}>
@@ -36,6 +36,10 @@ import PageViews from "../components/PageViews.astro";
                 target="_blank">{frontmatter.officaldocs}</a
             >
         </li>
+        <li>
+            <PageView />
+            
+          </li>
     </ul>
 
     <slot />
