--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const pageTitle = "Code and Conquer";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="900" height="300" alt="RaccoonSpaceGif" src="/home.png"/>
+        <img width="80%" height="auto" alt="RaccoonSpaceGif" src="/home.png"/>
     </div>
     <h1>Code and Conquer</h1>
     <quote> It's time to Code and Conquer!!!</quote>
