--- a/src/layouts/MarkdownPostsLayout.astro
+++ b/src/layouts/MarkdownPostsLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./Layout.astro";
 import dayjs from "dayjs";
 const { frontmatter } = Astro.props;
 import PostComments from "../components/PostComments.astro";
-import PageView from "../components/PageView.astro";
+import PageViews from "../components/PageViews.astro";
 
 ---
 
@@ -26,8 +26,7 @@ import PageView from "../components/PageView.astro";
       {dayjs(frontmatter.date).format("DD-MMMM-YYYY")}
     </li>
     <li>
-      <PageView />
-      
+      <PageViews />
     </li>
   </ul>
   <slot />
