--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,21 +11,29 @@ const pageTitle = "Code and Conquer";
     <quote> It's time to Code and Conquer!!!</quote>
     <h2>About</h2>
     <p>
-        Here at Code and Conquer, we are a collection of non-coders learning to code. 
-        We understand that learning to code is a daunting task—after all, it’s a whole new language.
+        Here at Code and Conquer, we are a collection of non-coders and content creators learning to code. 
+        We understand that learning to code is a daunting task, after all, it’s a whole new language.
         However, we hope to help relieve some of the worries and invite you to join us on this journey.
         We will document what we learn, how we learn, and share some resources along the way! 
-        We also want to share how we create content based on this "development," as learning means that 90% of the time we don’t know the answer.
+        We also want to share how we create content based on this "development," as learning often means that 90% of the time, we don’t know the answer.
     </p>
     <p>
-        In the team, we have a range of skills and experience. 
-        We have people who are at the beginning of their journey and others who have been developing for years. 
-        Since we are all content creators with a wider range of viewerships, we have members with good viewerships and others with much smaller communities. 
-        But we strongly believe there is a place for everyone, no matter how small or how little experience you have..
+        In the team, we have a range of skills and experiences. 
+        Some are at the beginning of their journey, while others have been developing for years. 
+        Since we are all content creators with varied audiences, we have members with larger communities and others with much smaller ones. 
+        We strongly believe there is a place for everyone, no matter how small your community is or how little experience you have.
     </p>
     <p>
-        We are currently not taking on new members; however, we might in the future, so please keep checking for updates.
+        Check out the blog and resources section, where we will be posting our progress and what we learn along the way.
+        We will also be posting tutorials and guides to help you. 
+        These will cover a wide range of topics, from coding and game development to content creation and streaming.
+        We'll also be sharing our projects and ideas, so you can see what we're working on and how we’re applying what we learn.
     </p>
+    <p>
+        <i>Would you like to write with us?
+        We are always looking for new writers and coders to join our team. If you're interested, please get in touch with CodeWithTD, his details can be found below to help you connect with us.</i>
+    </p>
+    
     <h2>Our Skills</h2>
     <div class="skills center">
         <img class="skills__img" width="46" height="46" alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg"/>
@@ -42,7 +50,7 @@ const pageTitle = "Code and Conquer";
     <h2>The Team</h2>
     <TeamMember 
     username="CodeWithTD" 
-    subheading="Game and Streamer.bot Extension Developer"
+    subheading="Game and Streamer.bot Extension Developer, Lead Writer and Content Creator"
     doras='https://doras.to/td' 
     bio="Also known as TerrierDarts, I started coding in late November 2021, and since then, I’ve developed my skills in C#, along with some web development, dabbling in HTML, CSS, and JavaScript. More recently, I’ve been learning GDScript, which has been challenging but fun. I also stream on Twitch, where I show off my coding skills and offer advice on code and content creation in general. If this sounds like something you’d enjoy, feel free to stop by, hang out, and ask any questions you might have!" 
     />
