--- a/src/components/TeamMember.astro
+++ b/src/components/TeamMember.astro
@@ -10,7 +10,7 @@ const { username, bio, subheading, doras } = Astro.props;
 ---
 
 <div class="team-member">
-  <a href=`https://twitch.tv/${username}` target="_blank"><h2>{username}</h2></a
+  <a href=`https://twitch.tv/${username}` target="_blank"><h3>{username}</h3></a
   >
   <span class="badge">{subheading}</span>
   <p>
@@ -66,7 +66,7 @@ const { username, bio, subheading, doras } = Astro.props;
 
   h3 {
     margin: 0.5rem 0;
-    color: #666;
+    color: #78c2ad
   }
 
   .bio {
