--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const year = new Date().getFullYear();
             <li class="icon__btn"><a class="icon__link" href="mailto: #@gmail.com"><span class="mail-icon">Email</span></a></li>
             <li class="icon__btn"><a class="icon__link" href="#" target="_blank"><span class="linked-in">LinkedIn</span></a></li-->
         </ul>
-        <small>&copy; {year} Code and Conquer - Founded by TerrierDarts (in 2024)</a>. All Rights Reserved.</small>
+        <small>&copy; {year} Code and Conquer - Founded by TerrierDarts (CodeWithTD) in 2024</a>. All Rights Reserved.</small>
     </div>
 </footer>
 
