--- a/src/components/CommissionLink.astro
+++ b/src/components/CommissionLink.astro
@@ -8,7 +8,7 @@ const { title, link } = Astro.props;
 
 const platform = {
   color: '#999',
-  icon: 'lucide:link',
+  icon: 'hugeicons:save-money-pound',
 };
 ---
 
